# randomprime

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ci.sh  randomprime.html
auto_struct_macros/: Cargo.toml
doc/: quality_of_life.md  small_samus.md
dol_linker/: Cargo.toml
extra_assets/: EFDFFB8C.CMDL  charge_beam_animated_glow.TXTR  charge_beam_glow_border.TXTR  charge_beam_glow_trim.TXTR  charge_beam_holorim.TXTR  charge_beam_metal_body.TXTR  charge_beam_metal_trim.TXTR  flamethrower_animated_glow.TXTR  flamethrower_cap_glow.TXTR  flamethrower_color_body.TXTR  flamethrower_glow_border.TXTR  flamethrower_glow_trim.TXTR  flamethrower_holorim.TXTR  flamethrower_metal_body.TXTR  flamethrower_metal_trim.TXTR  flamethrower_vertice_color.TXTR  map_pickupdot.txtr  (+68 more)
structs/: Cargo.toml
structs/src/: dumb.rs  gc_disc.rs  lib.rs  mapa.rs  mrea.rs  pak.rs  res_id.rs  savw.rs  scly.rs  strg.rs  txtr.rs
structs/src/scly_props/: actor.rs  actor_contraption.rs  actor_key_frame.rs  actor_rotate.rs  ai_jump_point.rs  ambient_ai.rs  atomic_alpha.rs  atomic_beta.rs  babygoth.rs  ball_trigger.rs  beetle.rs  bloodflower.rs  burrower.rs  camera.rs  camera_blur_keyframe.rs  camera_filter_keyframe.rs  camera_hint.rs  camera_hint_trigger.rs  camera_pitch_volume.rs  camera_waypoint.rs  chozo_ghost.rs  counter.rs  cover_point.rs  damageable_trigger.rs  debris.rs  debris_extended.rs  distance_fog.rs  dock.rs  door.rs  drone.rs  effect.rs  elite_pirate.rs  energy_ball.rs  eyeball.rs  fire_flea.rs  fish_cloud.rs  flaahgra.rs  flaahgra_tentacle.rs  flicker_bat.rs  flying_pirate.rs  (+48 more)
(+37 files in other folders)
